--- a/inscripcion.html
+++ b/inscripcion.html
@@ -25,7 +25,8 @@
           <label for="peludito"> Peludito </label>
           <input type="text" placeholder="ingresa el nombre de tu peludito" />
         </div>
-        <a href="/presentacion.html" id="ingresar">
+        <a href="/presentacion.html" id="ingresar"
+          >Ñ
           <button id="button1">Ingresar</button>
         </a>
       </form>
